Test/dafny0/PrintEffectsResolution.dfy.expect
PrintEffectsResolution.dfy(10,22): Error: :print attribute is not allowed on ghost methods
PrintEffectsResolution.dfy(13,15): Error: :print attribute is not allowed on ghost methods
PrintEffectsResolution.dfy(16,18): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(18,25): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(20,18): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(26,28): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(30,28): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(34,15): Error: :print attribute does not take any arguments
8 resolution/type errors detected in PrintEffectsResolution.dfy
PrintEffectsResolution.dfy(10,22): Error: :print attribute is not allowed on ghost methods
PrintEffectsResolution.dfy(13,15): Error: :print attribute is not allowed on ghost methods
PrintEffectsResolution.dfy(16,18): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(18,25): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(20,18): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(26,28): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(30,28): Error: :print attribute is not allowed on functions
PrintEffectsResolution.dfy(34,15): Error: :print attribute does not take any arguments
8 resolution/type errors detected in PrintEffectsResolution.dfy
